--- a/Donation.html
+++ b/Donation.html
@@ -146,6 +146,9 @@
                         <input type="number" placeholder="Other" class="p-3 rounded-lg border border-gray-200">
                     </div>
 
+                    <!-- Donation Message Display -->
+                    <div id="donation-message" class="mb-4 text-green-700 font-semibold"></div>
+
                     <!-- Payment Methods -->
                     <h3 class="text-xl font-semibold mb-4">Payment Method</h3>
                     <div class="space-y-4 mb-8">
